<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">

    <Spinner
        android:id="@+id/province_spinner"
        android:layout_width="374dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/province_entries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_v_province2" />

    <TextView
        android:id="@+id/txt_v_province2"
        android:layout_width="384dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:text="Province"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/primary_bznz_spinner"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/primary_bznz_spinner"
        android:layout_width="374dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/primary_business_entries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_v_prim_bznz2" />

    <TextView
        android:id="@+id/txt_v_prim_bznz2"
        android:layout_width="384dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="Primary Business"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/address"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/business_number"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Business Number"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="Name"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/business_number" />

    <EditText
        android:id="@+id/address"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:onClick="updateContact"
        android:text="Update Data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province_spinner" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:onClick="eraseContact"
        android:text="Erase Contact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province_spinner" />



</android.support.constraint.ConstraintLayout>
